force-app/main/default/objects/Order/fields/Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Com aquisição</label>
    <type>Checkbox</type>
</CustomField>