force-app/main/default/objects/Order/fields/ActivationDDDGroup__c.field-meta.xml
<CustomField>
    <fullName>ActivationDDDGroup__c</fullName>
    <formula>IF(
ISBLANK(TEXT(DDD__c)),NULL,
CASE(DDD__c,
&quot;16&quot;,&quot;G2&quot;,
&quot;53&quot;,&quot;G2&quot;,
&quot;63&quot;,&quot;G2&quot;,
&quot;65&quot;,&quot;G2&quot;,
&quot;66&quot;,&quot;G2&quot;,
&quot;68&quot;,&quot;G2&quot;,
&quot;69&quot;,&quot;G2&quot;,
&quot;85&quot;,&quot;G2&quot;,
&quot;97&quot;,&quot;G2&quot;,
&quot;98&quot;,&quot;G2&quot;,
&quot;99&quot;,&quot;G2&quot;,
&quot;G1&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo de DDDs para Ativação</label>
    <type>Text</type>
</CustomField>