force-app/main/default/objects/Order/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <label>Setor de atividade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>