force-app/main/default/objects/Order/fields/Adabas__c.field-meta.xml
<CustomField>
    <fullName>Adabas__c</fullName>
    <description>Campo do objeto USER (us360)</description>
    <label>Adabas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>