force-app/main/default/objects/Order/fields/AdabasAssignedDocument__c.field-meta.xml
<CustomField>
    <fullName>AdabasAssignedDocument__c</fullName>
    <description>BL 0 - J110 - Amazenar CNPJ/CPF do usuário</description>
    <label>Adabas Documento Atribuído</label>
    <length>20</length>
    <type>Text</type>
</CustomField>