force-app/main/default/objects/Order/fields/ApprovalRequestCustomerName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestCustomerName__c</fullName>
    <description>Field used to store customer Name to apper at ApprovalProcess</description>
    <label>Nome do Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>