force-app/main/default/objects/Order/fields/ApprovalRequestUsername__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestUsername__c</fullName>
    <label>Nome do Usuário</label>
    <length>80</length>
    <type>Text</type>
</CustomField>