force-app/main/default/objects/Order/fields/ApproverProcessName__c.field-meta.xml
<CustomField>
    <fullName>ApproverProcessName__c</fullName>
    <label>Nome Processo de Aprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>