force-app/main/default/objects/Order/fields/ApproverUserId__c.field-meta.xml
<CustomField>
    <fullName>ApproverUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US334 -Solicitar autorização de alçada(Habilitação)  - Guilherme Kaiser</description>
    <label>Id Usuário Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>