force-app/main/default/objects/Order/fields/ApproverUserName__c.field-meta.xml
<CustomField>
    <fullName>ApproverUserName__c</fullName>
    <description>US 339 - Solicitar autorização de alçada(Habilitação) - Guilherme Kaiser</description>
    <label>Nome Usuário Aprovador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>