force-app/main/default/objects/Order/fields/AssigneeAccount__c.field-meta.xml
<CustomField>
    <fullName>AssigneeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta cessionária</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Conta cessionária)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>