force-app/main/default/objects/Order/fields/BillingAddressType__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressType__c</fullName>
    <description>Tipo Logradouro</description>
    <label>BillingAddressType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>