force-app/main/default/objects/Order/fields/BillingComplement1__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement1__c</fullName>
    <label>BillingComplement1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>