force-app/main/default/objects/Order/fields/BillingComplement2__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement2__c</fullName>
    <label>BillingComplement2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>