force-app/main/default/objects/Order/fields/BillingComplement3__c.field-meta.xml
<CustomField>
    <fullName>BillingComplement3__c</fullName>
    <label>BillingComplement3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>