force-app/main/default/objects/Order/fields/BillingComplementType1__c.field-meta.xml
<CustomField>
    <fullName>BillingComplementType1__c</fullName>
    <label>BillingComplementType1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>