force-app/main/default/objects/Order/fields/BillingComplementType2__c.field-meta.xml
<CustomField>
    <fullName>BillingComplementType2__c</fullName>
    <label>BillingComplementType2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>