force-app/main/default/objects/Order/fields/BillingComplementType3__c.field-meta.xml
<CustomField>
    <fullName>BillingComplementType3__c</fullName>
    <label>BillingComplementType3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>