force-app/main/default/objects/Order/fields/BillingIBGECode__c.field-meta.xml
<CustomField>
    <fullName>BillingIBGECode__c</fullName>
    <label>BillingIBGECode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>