force-app/main/default/objects/Order/fields/BillingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>BillingNeighborhood__c</fullName>
    <label>BillingNeighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>