force-app/main/default/objects/Order/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <label>BillingNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>