force-app/main/default/objects/Order/fields/BillingSREAddressId__c.field-meta.xml
<CustomField>
    <fullName>BillingSREAddressId__c</fullName>
    <label>BillingSREAddressId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>