force-app/main/default/objects/Order/fields/BO__c.field-meta.xml
<CustomField>
    <fullName>BO__c</fullName>
    <description>Indica se há dados de BO inseridos para bloqueio por perda/roubo</description>
    <label>Boletim de Ocorrencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Nao</fullName>
                <default>true</default>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>