force-app/main/default/objects/Order/fields/BOCity__c.field-meta.xml
<CustomField>
    <fullName>BOCity__c</fullName>
    <description>Cidade do Boletim de Ocorrência</description>
    <label>Cidade do BO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>