force-app/main/default/objects/Order/fields/BODate__c.field-meta.xml
<CustomField>
    <fullName>BODate__c</fullName>
    <description>Data do Boletim de Ocorrência</description>
    <label>Data do BO</label>
    <type>Date</type>
</CustomField>