force-app/main/default/objects/Order/fields/BONumber__c.field-meta.xml
<CustomField>
    <fullName>BONumber__c</fullName>
    <description>Número do Boletim de Ocorrência</description>
    <label>Número do BO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>