force-app/main/default/objects/Order/fields/BORemarks__c.field-meta.xml
<CustomField>
    <fullName>BORemarks__c</fullName>
    <description>Campo utilizado para armazenar comentário referente ao Boletim de Ocorrência</description>
    <label>Comentário do BO</label>
    <type>TextArea</type>
</CustomField>