force-app/main/default/objects/Order/fields/ChangeAdPackage__c.field-meta.xml
<CustomField>
    <fullName>ChangeAdPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Troca Pac Adicional</label>
    <type>Checkbox</type>
</CustomField>