force-app/main/default/objects/Order/fields/ChangePlan__c.field-meta.xml
<CustomField>
    <fullName>ChangePlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo criado para elegibilidade caso necessite a troca do plano</description>
    <label>Troca de Plano</label>
    <type>Checkbox</type>
</CustomField>