force-app/main/default/objects/Order/fields/ChangePromotion__c.field-meta.xml
<CustomField>
    <fullName>ChangePromotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para a elegibilidade na troca de número, quando necessária a troca de promoção esse campo será verdadeiro</description>
    <label>Troca Promoção</label>
    <type>Checkbox</type>
</CustomField>