force-app/main/default/objects/Order/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HYBRIS</fullName>
            </value>
            <value>
                <fullName>URA</fullName>
            </value>
            <value>
                <fullName>SATPUSH</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
                <isActive>false</isActive>
                <label>SALESFORCE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>