force-app/main/default/objects/Order/fields/channelId__c.field-meta.xml
<CustomField>
    <fullName>channelId__c</fullName>
    <label>Id do Canal de Atendimento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>