force-app/main/default/objects/Order/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <formula>SalesChannel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de Atendimento</label>
    <type>Text</type>
</CustomField>