force-app/main/default/objects/Order/fields/ContractGenerationId__c.field-meta.xml
<CustomField>
    <fullName>ContractGenerationId__c</fullName>
    <description>Campo fórmula que gera um Id numérico que utilizaremos para enviar para realizar a geração de contrato no GEDOC.</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate))),2,&apos;0&apos;) &amp; OrderNumber</formula>
    <label>Id de Geração do Contrato</label>
    <type>Text</type>
</CustomField>