force-app/main/default/objects/Order/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>DDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55</fullName>
                <default>true</default>
                <label>55</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>