force-app/main/default/objects/Order/fields/CurrentEID__c.field-meta.xml
<CustomField>
    <fullName>CurrentEID__c</fullName>
    <description>O EID (Embedded Identification Document) é um identificador de aparelho exclusivo para conexão do eSIM no celular. Para trocas de aparelho, esse campo recebe o eSIM anterior.</description>
    <label>EID Atual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>