force-app/main/default/objects/Order/fields/CurrentICCID__c.field-meta.xml
<CustomField>
    <fullName>CurrentICCID__c</fullName>
    <description>Identificador do SIM Card da linha sendo utilizado no pedido. Para trocas de chip esse campo recebe o SIM Card anterior.</description>
    <label>ICCID Atual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>