force-app/main/default/objects/Order/fields/CurrentIMEI__c.field-meta.xml
<CustomField>
    <fullName>CurrentIMEI__c</fullName>
    <description>O IMEI identifica o dispositivo móvel. Para trocas de aparelho, esse campo recebe o IMEI anterior.</description>
    <label>IMEI Atual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>