force-app/main/default/objects/Order/fields/CurrentIMSI__c.field-meta.xml
<CustomField>
    <fullName>CurrentIMSI__c</fullName>
    <description>Identificador do SIM Card (International Mobile Subscriber Identity) da linha sendo utilizado no pedido. Para trocas de chip esse campo recebe o SIM Card anterior.</description>
    <label>IMSI Atual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>