force-app/main/default/objects/Order/fields/CurrentMSISDN__c.field-meta.xml
<CustomField>
    <fullName>CurrentMSISDN__c</fullName>
    <description>Número da linha sendo utilizada no pedido. Para trocas de número esse campo recebe o número anterior.</description>
    <label>MSISDN Atual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>