force-app/main/default/objects/Order/fields/CustomerInteractionId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CustomerInteractionId where this Order was created</description>
    <label>Customer Interaction Id</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>