force-app/main/default/objects/Order/fields/CustomerLifecycle__c.field-meta.xml
<CustomField>
    <fullName>CustomerLifecycle__c</fullName>
    <description>Define o ciclo de vida do cliente</description>
    <label>Ciclo de Vida do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation</fullName>
                <label>Ativação</label>
            </value>
            <value>
                <fullName>Change</fullName>
                <label>Mudança</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>