force-app/main/default/objects/Order/fields/DataHoraGeracaoQRCode__c.field-meta.xml
<CustomField>
    <fullName>DataHoraGeracaoQRCode__c</fullName>
    <description>Responsável por armazenar a Data/Hora da Geração de URL do QR Code.</description>
    <label>Data/Hora Geração do QR Code</label>
    <type>DateTime</type>
</CustomField>