force-app/main/default/objects/Order/fields/ExtendedWindow__c.field-meta.xml
<CustomField>
    <fullName>ExtendedWindow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para solicitação de portabilidade caso a data for estendida.</description>
    <label>Data Estendida</label>
    <type>Checkbox</type>
</CustomField>