force-app/main/default/objects/Order/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo utilizado pela Habilitação Remota. Armazena o campo externalId do serviço de pré-ativação da linha executado pelo HRS.</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>