force-app/main/default/objects/Order/fields/ExternalRequestId__c.field-meta.xml
<CustomField>
    <fullName>ExternalRequestId__c</fullName>
    <description>Id de Solicitação do Pedido para uso em Callbacks</description>
    <externalId>true</externalId>
    <label>Id de Solicitação Externa</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>