force-app/main/default/objects/Order/fields/HasByPassApproval__c.field-meta.xml
<CustomField>
    <fullName>HasByPassApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica se o processo de validação de fraude foi aprovado por bypass.</description>
    <label>Com Aprovação ByPass</label>
    <type>Checkbox</type>
</CustomField>