force-app/main/default/objects/Order/fields/HasDoesNotProceedImpugnment__c.field-meta.xml
<CustomField>
    <fullName>HasDoesNotProceedImpugnment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado no OM de Contestação para validação de envio de Notificação de Impugnação Improcedente</description>
    <label>Tem Impugnação Improcedente</label>
    <type>Checkbox</type>
</CustomField>