force-app/main/default/objects/Order/fields/HasImpugnment__c.field-meta.xml
<CustomField>
    <fullName>HasImpugnment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado no OM de Contestação para validação de envio de Notificação de Impugnação Procedente</description>
    <label>Tem Impugnação</label>
    <type>Checkbox</type>
</CustomField>