force-app/main/default/objects/Order/fields/HasPartialImpugnment__c.field-meta.xml
<CustomField>
    <fullName>HasPartialImpugnment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado no OM de Contestação para validação de envio de Notificação de Impugnação Procedente Parcial</description>
    <label>Tem Impugnação Parcial</label>
    <type>Checkbox</type>
</CustomField>