force-app/main/default/objects/Order/fields/hasPortability__c.field-meta.xml
<CustomField>
    <fullName>hasPortability__c</fullName>
    <description>Pedido com Portabilidade &quot;SIM&quot; ou &quot;NÃO&quot;</description>
    <inlineHelpText>Pedido com Portabilidade &quot;SIM&quot; ou &quot;NÃO&quot;</inlineHelpText>
    <label>Com Portabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>