force-app/main/default/objects/Order/fields/hasProvisonalNumber__c.field-meta.xml
<CustomField>
    <fullName>hasProvisonalNumber__c</fullName>
    <description>Pedido com Portabilidade e Numero Provisório</description>
    <inlineHelpText>Pedido com Portabilidade e Numero Provisório</inlineHelpText>
    <label>Com Provisorio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
                <default>true</default>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>