force-app/main/default/objects/Order/fields/hasSapContingency__c.field-meta.xml
<CustomField>
    <fullName>hasSapContingency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar se há Contingência SAP</description>
    <label>Com Contingência SAP</label>
    <type>Checkbox</type>
</CustomField>