force-app/main/default/objects/Order/fields/installmentsPayment__c.field-meta.xml
<CustomField>
    <fullName>installmentsPayment__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>full</fullName>
                <label>Á vista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>