force-app/main/default/objects/Order/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <label>Data de emissão nota fiscal</label>
    <type>Date</type>
</CustomField>