force-app/main/default/objects/Order/fields/InvoiceKey__c.field-meta.xml
<CustomField>
    <fullName>InvoiceKey__c</fullName>
    <label>Número da chave acesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>