force-app/main/default/objects/Order/fields/isPorted__c.field-meta.xml
<CustomField>
    <fullName>isPorted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Range Vivo</label>
    <type>Checkbox</type>
</CustomField>