force-app/main/default/objects/Order/fields/JustifiedReason__c.field-meta.xml
<CustomField>
    <fullName>JustifiedReason__c</fullName>
    <label>Motivo Justificativa</label>
    <type>TextArea</type>
</CustomField>