force-app/main/default/objects/Order/fields/LossofDocuments__c.field-meta.xml
<CustomField>
    <fullName>LossofDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicar se houve perda de documentos do cliente</description>
    <label>Perda de Documentos</label>
    <type>Checkbox</type>
</CustomField>