force-app/main/default/objects/Order/fields/NewEID__c.field-meta.xml
<CustomField>
    <fullName>NewEID__c</fullName>
    <description>O EID (Embedded Identification Document) é um identificador de aparelho exclusivo para conexão do eSIM no celular. Para trocas de aparelho, esse campo recebe o eSIM novo.</description>
    <label>EID Novo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>