force-app/main/default/objects/Order/fields/NewICCID__c.field-meta.xml
<CustomField>
    <fullName>NewICCID__c</fullName>
    <description>Itentificador do SIM Card novo para operações de troca de chip.</description>
    <label>ICCID Novo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>