force-app/main/default/objects/Order/fields/NewIMEI__c.field-meta.xml
<CustomField>
    <fullName>NewIMEI__c</fullName>
    <description>O IMEI identifica o dispositivo móvel. Para trocas de aparelho, esse campo recebe o IMEI novo.</description>
    <label>IMEI Novo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>