force-app/main/default/objects/Order/fields/NewIMSI__c.field-meta.xml
<CustomField>
    <fullName>NewIMSI__c</fullName>
    <description>Itendificador do chip nas rede de telefonia a ser utilizado em processo de troca de chip. Será populado com as informações do chip futuro.</description>
    <label>IMSI Novo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>