force-app/main/default/objects/Order/fields/NewMSISDN__c.field-meta.xml
<CustomField>
    <fullName>NewMSISDN__c</fullName>
    <description>Futuro número de linha para operações de troca de número.</description>
    <label>MSISDN Novo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>