force-app/main/default/objects/Order/fields/NewRMStatus__c.field-meta.xml
<CustomField>
    <fullName>NewRMStatus__c</fullName>
    <description>Campo criado para Jornada do bloco 7, serão utilizadas no OM.</description>
    <label>Novo Status do RM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>