force-app/main/default/objects/Order/fields/NewSubscription__c.field-meta.xml
<CustomField>
    <fullName>NewSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nova Assinatura</label>
    <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>