force-app/main/default/objects/Order/fields/NumberofDays__c.field-meta.xml
<CustomField>
    <fullName>NumberofDays__c</fullName>
    <description>Tempo em dias da duração do bloqueio</description>
    <label>Número de Dias</label>
    <length>3</length>
    <type>Text</type>
</CustomField>