force-app/main/default/objects/Order/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <description>Campo utilizado na Habilitação Remota. Armazena o campo category do serviço de pré-ativação da linha executado pelo HRS.</description>
    <label>Tipo de Operação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>