force-app/main/default/objects/Order/fields/OrderAccountDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderAccountDocumentNumber__c</fullName>
    <formula>Account.DocumentNumberFormated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF do Cliente</label>
    <type>Text</type>
</CustomField>