force-app/main/default/objects/Order/fields/OrderAction__c.field-meta.xml
<CustomField>
    <fullName>OrderAction__c</fullName>
    <formula>CASE(TEXT(Type),
&apos;Habilitação Pré&apos;,&apos;Habilitação Pré pago&apos;,
&apos;PrepaidRemoteActivation&apos;,&apos;Habilitação Pré pago Remota&apos;,
&apos;Recharge&apos;,&apos;Recarga online&apos;,
&apos;Change&apos;,&apos;Troca de produto&apos;,
&apos;RechargeVoucher&apos;,&apos;Recarga física&apos;,
&apos;AdditionalPackage&apos;,&apos;Pacote Adicional&apos;,
&apos;Promotion&apos;,&apos;Promoção&apos;,
&apos;ServiceManagement&apos;,&apos;Gestão de Serviços&apos;,
&apos;ChangeSimCard&apos;,&apos;Troca de SimCard&apos;,
&apos;ChangeServiceIdentifier&apos;,&apos;Troca de Número&apos;,
&apos;EffectPortOut&apos;,&apos;Efetivação do PortOut&apos;,
&apos;FreezeLine&apos;,&apos;Congelamento da Linha&apos;,
&apos;ReactivationLine&apos;,&apos;Reativação de Linha&apos;,
&apos;BlockLine&apos;,&apos;Bloqueio de Linha&apos;,
&apos;UnblockLine&apos;,&apos;Desbloqueio de Linha&apos;,
&apos;CancelLine&apos;,&apos;Cancelamento de Linha&apos;,
&apos;DeactivateLine&apos;,&apos;Desprogramação de Linha&apos;,
&apos;Migration&apos;,&apos;Migração&apos;,
&apos;EffectPortin&apos;,&apos;Efetivação do Port-In&apos;,
&apos;NumberSwap&apos;,&apos;Swap de Número&apos;,
&apos;PostPaidMigration&apos;,&apos;Migração Pós Pago&apos;,
&apos;ControlMigration&apos;,&apos;Migração Controle&apos;,
&apos;ReversalPortout&apos;,&apos;Estorno do Portout&apos;,
&apos;DeviceBlock&apos;,&apos;Bloqueio de Aparelho&apos;,TEXT(Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ação</label>
    <type>Text</type>
</CustomField>