force-app/main/default/objects/Order/fields/OriginalPlataform__c.field-meta.xml
<CustomField>
    <fullName>OriginalPlataform__c</fullName>
    <description>Plataforma Origem: Pré Pago; Pós Pago; Controle; MVNO</description>
    <label>Plataforma Origem</label>
    <length>20</length>
    <type>Text</type>
</CustomField>