force-app/main/default/objects/Order/fields/OriginalSystem__c.field-meta.xml
<CustomField>
    <fullName>OriginalSystem__c</fullName>
    <description>Sistema Origem: Vivo Next; MVNE; Salesforce</description>
    <label>Sistema Origem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>