force-app/main/default/objects/Order/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Meio de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditCard</fullName>
                <label>Cartão de Crédito</label>
            </value>
            <value>
                <fullName>debitCard</fullName>
                <label>Cartão de Débito</label>
            </value>
            <value>
                <fullName>money</fullName>
                <label>Dinheiro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>