force-app/main/default/objects/Order/fields/PoliceStation__c.field-meta.xml
<CustomField>
    <fullName>PoliceStation__c</fullName>
    <description>Delegacia em que foi registrado o Boletim de Ocorrência</description>
    <label>Delegacia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>